@@ -1,15 +1,5 @@
 package org.mage.test.serverside.base;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FilenameFilter;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Scanner;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 import mage.cards.Card;
 import mage.cards.repository.CardInfo;
 import mage.cards.repository.CardRepository;
@@ -21,6 +11,7 @@ import mage.game.match.MatchType;
 import mage.game.permanent.PermanentCard;
 import mage.game.tournament.TournamentType;
 import mage.players.Player;
+import mage.players.PlayerType;
 import mage.server.game.GameFactory;
 import mage.server.game.PlayerFactory;
 import mage.server.tournament.TournamentFactory;
@@ -34,6 +25,12 @@ import org.apache.log4j.Logger;
 import org.junit.BeforeClass;
 import org.mage.test.player.RandomPlayer;
 import org.mage.test.player.TestPlayer;
+
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * Base class for all tests.
@@ -105,15 +102,15 @@ public abstract class MageTestBase {
         logger.info("Starting MAGE tests");
         logger.info("Logging level: " + logger.getLevel());
         deleteSavedGames();
-        ConfigSettings config = ConfigSettings.getInstance();
+        ConfigSettings config = ConfigSettings.instance;
         for (GamePlugin plugin : config.getGameTypes()) {
-            GameFactory.getInstance().addGameType(plugin.getName(), loadGameType(plugin), loadPlugin(plugin));
+            GameFactory.instance.addGameType(plugin.getName(), loadGameType(plugin), loadPlugin(plugin));
         }
         for (GamePlugin plugin : config.getTournamentTypes()) {
-            TournamentFactory.getInstance().addTournamentType(plugin.getName(), loadTournamentType(plugin), loadPlugin(plugin));
+            TournamentFactory.instance.addTournamentType(plugin.getName(), loadTournamentType(plugin), loadPlugin(plugin));
         }
         for (Plugin plugin : config.getPlayerTypes()) {
-            PlayerFactory.getInstance().addPlayerType(plugin.getName(), loadPlugin(plugin));
+            PlayerFactory.instance.addPlayerType(plugin.getName(), loadPlugin(plugin));
         }
 //        for (Plugin plugin : config.getDeckTypes()) {
 //            DeckValidatorFactory.getInstance().addDeckType(plugin.getName(), loadPlugin(plugin));
@@ -123,7 +120,7 @@ public abstract class MageTestBase {
 
     private static Class<?> loadPlugin(Plugin plugin) {
         try {
-            classLoader.addURL(new File(pluginFolder + "/" + plugin.getJar()).toURI().toURL());
+            classLoader.addURL(new File(pluginFolder + '/' + plugin.getJar()).toURI().toURL());
             logger.info("Loading plugin: " + plugin.getClassName());
             return Class.forName(plugin.getClassName(), true, classLoader);
         } catch (ClassNotFoundException ex) {
@@ -136,9 +133,9 @@ public abstract class MageTestBase {
 
     private static MatchType loadGameType(GamePlugin plugin) {
         try {
-            classLoader.addURL(new File(pluginFolder + "/" + plugin.getJar()).toURI().toURL());
+            classLoader.addURL(new File(pluginFolder + '/' + plugin.getJar()).toURI().toURL());
             logger.info("Loading game type: " + plugin.getClassName());
-            return (MatchType) Class.forName(plugin.getTypeName(), true, classLoader).newInstance();
+            return (MatchType) Class.forName(plugin.getTypeName(), true, classLoader).getConstructor().newInstance();
         } catch (ClassNotFoundException ex) {
             logger.warn("Game type not found:" + plugin.getJar() + " - check plugin folder");
         } catch (Exception ex) {
@@ -149,9 +146,9 @@ public abstract class MageTestBase {
 
     private static TournamentType loadTournamentType(GamePlugin plugin) {
         try {
-            classLoader.addURL(new File(pluginFolder + "/" + plugin.getJar()).toURI().toURL());
+            classLoader.addURL(new File(pluginFolder + '/' + plugin.getJar()).toURI().toURL());
             logger.info("Loading tournament type: " + plugin.getClassName());
-            return (TournamentType) Class.forName(plugin.getTypeName(), true, classLoader).newInstance();
+            return (TournamentType) Class.forName(plugin.getTypeName(), true, classLoader).getConstructor().newInstance();
         } catch (ClassNotFoundException ex) {
             logger.warn("Tournament type not found:" + plugin.getJar() + " - check plugin folder");
         } catch (Exception ex) {
@@ -166,12 +163,7 @@ public abstract class MageTestBase {
             directory.mkdirs();
         }
         File[] files = directory.listFiles(
-                new FilenameFilter() {
-                    @Override
-                    public boolean accept(File dir, String name) {
-                        return name.endsWith(".game");
-                    }
-                }
+                (dir, name) -> name.endsWith(".game")
         );
         for (File file : files) {
             file.delete();
@@ -181,8 +173,7 @@ public abstract class MageTestBase {
     protected void parseScenario(String filename) throws FileNotFoundException {
         parserState = ParserState.INIT;
         File f = new File(filename);
-        Scanner scanner = new Scanner(f);
-        try {
+        try(Scanner scanner = new Scanner(f)) {
             while (scanner.hasNextLine()) {
                 String line = scanner.nextLine().trim();
                 if (line == null || line.isEmpty() || line.startsWith("#")) {
@@ -198,13 +189,11 @@ public abstract class MageTestBase {
                 }
                 parseLine(line);
             }
-        } finally {
-            scanner.close();
         }
     }
 
     private void parseLine(String line) {
-        if (parserState.equals(ParserState.EXPECTED)) {
+        if (parserState == ParserState.EXPECTED) {
             expectedResults.add(line); // just remember for future use
             return;
         }
@@ -260,7 +249,7 @@ public abstract class MageTestBase {
                         CardInfo cardInfo = CardRepository.instance.findCard(cardName);
                         Card card = cardInfo != null ? cardInfo.getCard() : null;
                         if (card != null) {
-                            if (gameZone.equals(Zone.BATTLEFIELD)) {
+                            if (gameZone == Zone.BATTLEFIELD) {
                                 PermanentCard p = new PermanentCard(card, null, currentGame);
                                 p.setTapped(tapped);
                                 perms.add(p);
@@ -301,8 +290,9 @@ public abstract class MageTestBase {
         }
     }
 
-    protected Player createPlayer(String name, String playerType) {
-        return PlayerFactory.getInstance().createPlayer(playerType, name, RangeOfInfluence.ALL, 5);
+    protected Player createPlayer(String name, PlayerType playerType) {
+        Optional<Player> playerOptional = PlayerFactory.instance.createPlayer(playerType, name, RangeOfInfluence.ALL, 5);
+        return playerOptional.orElseThrow(() -> new NullPointerException("PlayerFactory error - player is not created"));
     }
 
     protected Player createRandomPlayer(String name) {
